--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -259,8 +259,7 @@
                 Grid.Row="0"
                 Grid.Column="0"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}">
+                VerticalAlignment="Center">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -273,14 +272,28 @@
                 <ComboBox
                     Grid.Row="0"
                     Grid.Column="0"
+                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                     DisplayMemberPath="Name"
                     ItemsSource="{Binding CurrentPlayer.Weapons}"
-                    SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"
-                    SelectedValuePath="ID" />
+                    SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"/>
                 <Button
                     Grid.Row="0"
                     Grid.Column="2"
+                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                     Click="OnClick_AttackMonster"
+                    Content="Use" />
+                <ComboBox
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
+                    DisplayMemberPath="Name"
+                    ItemsSource="{Binding CurrentPlayer.Consumables}"
+                    SelectedItem="{Binding CurrentPlayer.CurrentConsumable}"/>
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
+                    Click="OnClick_UseCurrentConsumable"
                     Content="Use" />
             </Grid>
             <!--  Movement Controls  -->
