--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -11,8 +11,8 @@
     Height="768"
     d:DataContext="{d:DesignInstance viewModels:GameSession}"
     FontSize="11pt"
-    mc:Ignorable="d"
-    KeyDown="MainWindow_OnKeyDown">
+    KeyDown="MainWindow_OnKeyDown"
+    mc:Ignorable="d">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
@@ -203,8 +203,7 @@
             Grid.Column="0"
             Background="BurlyWood">
             <TabControl x:Name="PlayerDataTabControl">
-                <TabItem Header="Inventory"
-                         x:Name="InventoryTabItem">
+                <TabItem x:Name="InventoryTabItem" Header="Inventory">
                     <DataGrid
                         AutoGenerateColumns="False"
                         HeadersVisibility="Column"
@@ -225,8 +224,7 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
-                <TabItem Header="Quests"
-                         x:Name="QuestsTabItem">
+                <TabItem x:Name="QuestsTabItem" Header="Quests">
                     <DataGrid
                         AutoGenerateColumns="False"
                         HeadersVisibility="Column"
@@ -235,7 +233,13 @@
                             <DataGridTextColumn
                                 Width="*"
                                 Binding="{Binding PlayerQuest.Name, Mode=OneWay}"
-                                Header="Name" />
+                                Header="Name">
+                                <DataGridTextColumn.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="ToolTip" Value="{Binding PlayerQuest.ToolTipContents}" />
+                                    </Style>
+                                </DataGridTextColumn.CellStyle>
+                            </DataGridTextColumn>
                             <DataGridTextColumn
                                 Width="Auto"
                                 Binding="{Binding IsCompleted, Mode=OneWay}"
@@ -243,29 +247,36 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
-                <TabItem Header="Recipes"
-                         x:Name="RecipesTabItem">
-                    <DataGrid ItemsSource="{Binding CurrentPlayer.Recipes}"
-                              AutoGenerateColumns="False"
-                              HeadersVisibility="All">
+                <TabItem x:Name="RecipesTabItem" Header="Recipes">
+                    <DataGrid
+                        AutoGenerateColumns="False"
+                        HeadersVisibility="Column"
+                        ItemsSource="{Binding CurrentPlayer.Recipes}">
                         <DataGrid.Columns>
                             <DataGridTextColumn
                                 Width="*"
                                 Binding="{Binding Name, Mode=OneWay}"
-                                Header="Name" />
+                                Header="Name">
+                                <DataGridTextColumn.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="ToolTip" Value="{Binding ToolTipContents}" />
+                                    </Style>
+                                </DataGridTextColumn.CellStyle>
+                            </DataGridTextColumn>
                             <DataGridTemplateColumn MinWidth="75">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Click="OnClick_Craft"
-                                                Width="55"
-                                                Content="Craft"/>
+                                        <Button
+                                            Width="55"
+                                            Click="OnClick_Craft"
+                                            Content="Craft" />
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
-                
+
             </TabControl>
         </Grid>
         <!--  Action controls  -->
@@ -298,29 +309,29 @@
                 <ComboBox
                     Grid.Row="0"
                     Grid.Column="0"
-                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                     DisplayMemberPath="Name"
                     ItemsSource="{Binding CurrentPlayer.Weapons}"
-                    SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"/>
+                    SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"
+                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="0"
                     Grid.Column="2"
-                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                     Click="OnClick_AttackMonster"
-                    Content="Use" />
+                    Content="Use"
+                    Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}" />
                 <ComboBox
                     Grid.Row="1"
                     Grid.Column="0"
-                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
                     DisplayMemberPath="Name"
                     ItemsSource="{Binding CurrentPlayer.Consumables}"
-                    SelectedItem="{Binding CurrentPlayer.CurrentConsumable}"/>
+                    SelectedItem="{Binding CurrentPlayer.CurrentConsumable}"
+                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="2"
-                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
                     Click="OnClick_UseCurrentConsumable"
-                    Content="Use" />
+                    Content="Use"
+                    Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}" />
             </Grid>
             <!--  Movement Controls  -->
             <Grid Grid.Row="0" Grid.Column="1">
