--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -47,6 +47,7 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -71,33 +72,41 @@
             <Label
                 Grid.Row="2"
                 Grid.Column="0"
-                Content="Hit points:" />
+                Content="Dexterity:" />
             <Label
                 Grid.Row="2"
                 Grid.Column="1"
-                Content="{Binding CurrentPlayer.CurrentHitPoints}" />
+                Content="{Binding CurrentPlayer.Dexterity}" />
             <Label
                 Grid.Row="3"
+                Grid.Column="0"
+                Content="Hit points:" />
+            <Label
+                Grid.Row="3"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.CurrentHitPoints}" />
+            <Label
+                Grid.Row="4"
                 Grid.Column="0"
                 Content="Gold:" />
             <Label
-                Grid.Row="3"
+                Grid.Row="4"
                 Grid.Column="1"
                 Content="{Binding CurrentPlayer.Gold}" />
             <Label
-                Grid.Row="4"
+                Grid.Row="5"
                 Grid.Column="0"
                 Content="XP:" />
             <Label
-                Grid.Row="4"
+                Grid.Row="5"
                 Grid.Column="1"
                 Content="{Binding CurrentPlayer.ExperiencePoints}" />
             <Label
-                Grid.Row="5"
+                Grid.Row="6"
                 Grid.Column="0"
                 Content="Level:" />
             <Label
-                Grid.Row="5"
+                Grid.Row="6"
                 Grid.Column="1"
                 Content="{Binding CurrentPlayer.Level}" />
         </Grid>
