--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -29,12 +29,26 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <!--  Menu  -->
-        <Label
+        <Menu
             Grid.Row="0"
             Grid.Column="0"
             Grid.ColumnSpan="2"
             Background="AliceBlue"
-            Content="Menu" />
+            FontSize="11pt">
+            <MenuItem Header="File">
+                <MenuItem Click="StartNewGame_OnClick" Header="Start New Game" />
+                <Separator />
+                <MenuItem Click="LoadGame_OnClick" Header="Load Game" />
+                <MenuItem Click="SaveGame_OnClick" Header="Save Game" />
+                <Separator />
+                <MenuItem Click="Exit_OnClick" Header="Exit" />
+            </MenuItem>
+            <MenuItem Header="Help">
+                <MenuItem Header="Help" IsEnabled="False" />
+                <Separator />
+                <MenuItem Header="About" IsEnabled="False" />
+            </MenuItem>
+        </Menu>
         <!--  Player stats  -->
         <Grid
             Grid.Row="1"
